[gd_scene load_steps=2 format=3 uid="uid://o0adnvmsaovy"]

[ext_resource type="Script" uid="uid://bcv7owxk7u3yk" path="res://addons/stardust-net/demo/2d-topdown/game_world.gd" id="1_3dlct"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_3dlct")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ConnectionScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IP" type="LineEdit" parent="CanvasLayer/ConnectionScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -55.5
offset_right = 92.5
offset_bottom = -24.5
grow_horizontal = 2
grow_vertical = 2
text = "127.0.0.1"
placeholder_text = "IP Address"
alignment = 1

[node name="Port" type="LineEdit" parent="CanvasLayer/ConnectionScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -15.5
offset_right = 92.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "13377"
placeholder_text = "Port"
alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/ConnectionScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = 32.5
offset_right = -3.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer/ConnectionScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = 32.5
offset_right = 157.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
text = "Join"

[connection signal="pressed" from="CanvasLayer/ConnectionScreen/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionScreen/Join" to="." method="_on_join_pressed"]
